 * Spell Crit is now an event that can be tracked by Combat Event icons
 * Implementing LibDogTag as the text manager for TMW instead of TMW's current (and very limited) system. You can now create text layouts that can be applied to an icon to dictate how the texts for that icon will be displayed. Text layouts can be shared between users, and texts can be configured in a new tab on the icon editor.
 * Bug Fixes:
 ** (r489) TellMeWhen-5.0.2.lua:528 attempt to index local "h" (a nil value)
 ** (r491) Re-re-re-re-re-re fixed meta icons that check entire groups
 ** (r492) TellMeWhen-5.0.2.lua:1080 attempt to compare nil with number //(MAYBE)//
 ** (r493) ClassColors.lua:50 Bad argument #1 to :RegisterCallback (string or function expected)
 ** (r496) TellMeWhen-5.1.0\Modules\Texts.lua:124: attempt to concatenate field "?" (a nil value)
 ** (r498) Condition "Mounted" is no longer event based because it seems that it doesn't update on UNIT_AURA all the time

===v5.0.2===
 * Bug Fixes:
 ** (r485) (Condition): attempt to call global "GetEclipseDirection" (a nil value)

===v5.0.1===
 * Bug Fixes:
 ** (r483) Unit Cooldown icons checking spells by name should now function properly.
 ** (r483) Cooldown sweeps and other icon components are no longer anonymous frames, returning to their previous nomenclature appended by an underscore and the icon's view type (Currently only "icon", more coming soon)
 ** (r483) Fixed a faulty upgrade of the "PassThrough" setting when upgrading past 50035. Settings that already had this faulty upgrade occur may notice that the "Pass Through" setting on some of their events was toggled from checked to unchecked.

===v5.0.0===
 * Super cool changes:
 ** All icon types have been changed to be entirely event based, meaning that they will no longer update themselves when they don't need to, resulting in a (tremendous) performance increase.