@@ -1,7 +1,8 @@
 ===v5.1.0===
  * This is by and large the biggest update that TMW has ever seen. There were so many changes that I lost track of them. Many of the changes done weren't things that you should notice as a user - they are things that makes TMW much easier to expand in the future, including different icon view types aside from the standard square icon (e.g bars). These changes are not complete either - there is still work to be done before such features can be added.
- * Spell Crit is now an event that can be tracked by Combat Event icons
+ * Spell Crit is now an event that can be tracked by Combat Event icons.
  * Implementing LibDogTag as the text manager for TMW instead of TMW's current (and very limited) system. You can now create text layouts that can be applied to an icon to dictate how the texts for that icon will be displayed. Text layouts can be shared between users, and texts can be configured in a new tab on the icon editor.
+ * You can now select any of the 4 sound channels to play sounds to (instead of just Master and SFX).
  * Bug Fixes:
  ** (r489) TellMeWhen-5.0.2.lua:528 attempt to index local "h" (a nil value)
  ** (r491) Re-re-re-re-re-re fixed meta icons that check entire groups
@@ -9,6 +10,7 @@
  ** (r493) ClassColors.lua:50 Bad argument #1 to :RegisterCallback (string or function expected)
  ** (r496) TellMeWhen-5.1.0\Modules\Texts.lua:124: attempt to concatenate field "?" (a nil value)
  ** (r498) Condition "Mounted" is no longer event based because it seems that it doesn't update on UNIT_AURA all the time
+ ** (r499) TellMeWhen_Options.lua:1772: "}" expected (to close "{" at line 1762) near "order"
 
 ===v5.0.2===
  * Bug Fixes:
